--- a/index.html
+++ b/index.html
@@ -753,3 +753,4 @@
 </script>
 </body>
 </html>
+// TODO: Fix the generate lineup, uncheck planes and helicopters, correct the displayed icon and lineup size vary and fix all planes in lineup
